--- a/static/authentification_style.css
+++ b/static/authentification_style.css
@@ -1,10 +1,10 @@
-.main_block{
+.auth_block{
     height: 800px;
     width: 700px;
 
     border: 2px solid darkorange;
 
-    background-color: white;
+    background-color: aliceblue;
 
     margin-left: 900px;
     margin-top: 250px;
@@ -41,11 +41,11 @@ h1{
 .sign_button{
     padding-top: 70px;
     padding-left: 140px;
-    font-size: 40px;
+    font-size: 38px;
 }
 
 body{
-    background-image: url("web_image/pink_sky.jpg");
+    background-image: url("pink_sky.jpg");
     background-position: center;
     background-size: cover;
 }
