--- a/templates/authentication.html
+++ b/templates/authentication.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="authentification_style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='authentification_style.css') }}">
 </head>
 <body>
-    <div class="main_block">
+    <div class="auth_block">
         <h1>Авторизация</h1>
-        <img class="logo_image" src="web_image/logo.png" alt="Лого">
+        <img class="logo_image" src="../static/logo.png" alt="Лого">
         <div class="inputs_block">
         
         <form method="post">
@@ -19,7 +19,7 @@
             </form>
         <form method="post">
         <label class="password_label">
-            <input type="text" name="password_input" placeholder="Пароль" size="25">
+            <input type="password" name="password_input" placeholder="Пароль" size="25">
         </label>
         </form>
         <p class="sign_button"><input type="submit" name="auth_button" value="Войти" size="25"></p>
