--- a/templates/database.html
+++ b/templates/database.html
@@ -28,6 +28,7 @@
             <div class="flash {{cat}}">{{msg}}</div>
     {% endfor %}
    <form method="post">
+       <input type="hidden" name="table_name" value="{{table_name}}">
     <div class="div_inline table_data">
         <h1 class="table_name_title"> {{table_name}} </h1>
         <label>
